Fix broken CSS on frontend

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -33,5 +33,6 @@ code {
       color: #F8F8F8;
       border-radius: var.$button-bradius;
       border: none;
+      cursor: pointer;
   }
 }
